--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>org.sonarsource.sonarlint.core</groupId>
       <artifactId>sonarlint-core</artifactId>
-      <version>1.0.1</version>
+      <version>1.0.1-CODESCAN</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
